Us 2.1.3/baja de usuario (#29)
* Rebase after login/logout feature

* Rebase after project list feature

* Added UserRepository to ProjectTests to save users

* Secured delete endpoint

* Test rename and improvements

* Added feature baja-de-usuario

* Fixed UserController delete mapping